--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "url": "https://github.com/Rosey/markdown-draft-js.git"
   },
   "main": "lib/index.js",
-  "module": "src/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
+    "prepare": "npm run build",
     "prepublish": "npm run build",
     "test": "karma start --single-run",
     "lint": "eslint ./src",
